tests/baselines/reference/unclosedExportClause02.errors.txt
tests/cases/compiler/t2.ts(1,10): error TS2304: Cannot find name 'x'.
tests/cases/compiler/t2.ts(1,13): error TS2304: Cannot find name 'from'.
tests/cases/compiler/t2.ts(2,5): error TS1005: ',' expected.
tests/cases/compiler/t3.ts(1,10): error TS2304: Cannot find name 'from'.
tests/cases/compiler/t3.ts(2,5): error TS1005: ',' expected.
tests/cases/compiler/t4.ts(1,10): error TS2304: Cannot find name 'x'.
tests/cases/compiler/t4.ts(1,17): error TS1005: ',' expected.
tests/cases/compiler/t4.ts(1,17): error TS2304: Cannot find name 'from'.
tests/cases/compiler/t4.ts(2,5): error TS1005: ',' expected.
tests/cases/compiler/t5.ts(1,10): error TS2304: Cannot find name 'x'.
tests/cases/compiler/t5.ts(1,18): error TS2304: Cannot find name 'from'.
tests/cases/compiler/t5.ts(2,5): error TS1005: ',' expected.


==== tests/cases/compiler/t1.ts (0 errors) ====
    export var x = "x";
    
==== tests/cases/compiler/t2.ts (3 errors) ====
    export { x, from
             ~
!!! error TS2304: Cannot find name 'x'.
                ~~~~
!!! error TS2304: Cannot find name 'from'.
        "./t1";
        ~~~~~~
!!! error TS1005: ',' expected.
    
==== tests/cases/compiler/t3.ts (2 errors) ====
    export { from
             ~~~~
!!! error TS2304: Cannot find name 'from'.
        "./t1";
        ~~~~~~
!!! error TS1005: ',' expected.
    
==== tests/cases/compiler/t4.ts (4 errors) ====
    export { x as a from
             ~
!!! error TS2304: Cannot find name 'x'.
                    ~~~~
!!! error TS1005: ',' expected.
                    ~~~~
!!! error TS2304: Cannot find name 'from'.
        "./t1";
        ~~~~~~
!!! error TS1005: ',' expected.
    
==== tests/cases/compiler/t5.ts (3 errors) ====
    export { x as a, from
             ~
!!! error TS2304: Cannot find name 'x'.
                     ~~~~
!!! error TS2304: Cannot find name 'from'.
        "./t1";
        ~~~~~~
!!! error TS1005: ',' expected.